--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
 body {
-  background-color: #000099;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #000033;
+  color: white;
 }
