--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,14 @@ body {
   color: white;
 }
 
+button {
+  background-color: grey
+}
+
 .flexbox-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  height: 100vh
 }
