--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ button {
 .flexbox-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 100vh
 }
