--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+  font-family: Helvetica, Arial, sans-serif;
   background-color: #000033;
   color: white;
 }
@@ -7,6 +8,7 @@ button {
   background-color: #e67300;
   text-shadow: 1px 1px black;
   color: white;
+  padding: 5px;
 }
 
 .flexbox-container {
